# cozekit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  STATUS.md  cozekit-cli  pyproject.toml
.github/workflows/: ci.yml
docs/: code-policy-refactoring.md  code-review-20260617.md  compiler-design-review.md  compiler-expert-review-20260617.md  coze-workflow-language-spec.json  coze-workflow-spec.md  fe001-cross-validation.md  runtime-dependent-validations.md  spec-coverage-report.md  v1-v2-rule-mapping-table.md  v2-architecture-review-20260617.md  v2-architecture-review.md  validation-layers-status.md  validation-layers.md
docs/rule-impl/: FE-001-cross-validation.md  FE-001-node-validation-rules.md  FE-001-validateNode.md
docs/rules/: backend-rules.json  form-meta-rules.json  specialized-rules.json  validator-rules.json
docs/spec-parts/: ch01-overview.md  ch02-03-lexical-syntax.md  ch04-static-semantics.md  ch05-07-graph-link-runtime.md
src/cozekit/: __init__.py  __main__.py  api.py  cli.py  compiler_v2_api.py  pipeline.py  types.py
src/cozekit/ast/: __init__.py  analysis_graph.py  builder.py  indices.py  visitor.py  (+1 more)
tests/: conftest.py
tests/e2e/: test_cli.py
tests/gate/: test_health.py
tests/infra/: test_analysis_graph.py  test_architecture.py  test_pass_diagnostics.py  test_scope.py  test_sema.py  test_skeleton.py  test_type_system.py
tests/integration/: test_ast_error_recovery.py  test_ast_visitor.py  test_skeleton.py  test_transport_ast.py  test_yaml_source_converter.py
tests/passes/: test_pass_split.py
tests/transport/: test_error_recovery.py
(+153 files in other folders)
