[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cozekit"
version = "0.1.0"
description = "Static validator for Coze workflow files — syntax, semantics, and graph analysis without a runtime"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Coze Studio" }]
keywords = ["coze", "workflow", "validator", "linter", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
cozekit = "cozekit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cozekit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
